# r2l

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  ai_suggestion_on_perf_diff.md  checklist.txt  documentation.txt  envs_to_test.txt  learning_module.txt  model  naming.txt  things.txt  v0.0.2  v0.0.3  v0.0.4
.cargo/: config.toml
crates/r2l-agents/: Cargo.toml
crates/r2l-agents/src/: a2c.rs  a2c2.rs  lib.rs  ppo.rs  ppo2.rs  vpg.rs  vpg2.rs
crates/r2l-agents/src/burn_agents/: a2c.rs  mod.rs  ppo.rs  ppo5.rs
crates/r2l-agents/src/candle_agents/: a2c.rs  mod.rs  ppo.rs  ppo2.rs  ppo3.rs  ppo4.rs  ppo5.rs  vpg.rs
crates/r2l-agents/src/on_policy_algorithms/: a2c.rs  a2c2.rs  mod.rs  ppo.rs  ppo2.rs  ppo_new.rs  recurrent_ppo.rs  vpg.rs  vpg2.rs
crates/r2l-agents/src/ppo/: burn_ppo.rs  candle_ppo.rs
crates/r2l-agents/src/ppo2/: candle.rs
crates/r2l-api/: Cargo.toml  README.md
crates/r2l-api/src/: distribution.rs  learning_module.rs  lib.rs  policy_distribution.rs  test_utils.rs  zoo_parser.rs
crates/r2l-api/src/agents/: a2c.rs  a2c2.rs  burn_ppo2.rs  candle_ppo.rs  candle_ppo2.rs  mod.rs  ppo.rs  ppo2.rs
crates/r2l-api/src/algorithm/: a2c.rs  mod.rs  ppo.rs  ppo_algorithm.rs
crates/r2l-api/src/builders/: agent.rs  agent2.rs  distribution.rs  env.rs  learning_module.rs  learning_module2.rs  mod.rs  on_policy.rs  on_policy2.rs  on_policy_algo2.rs  policy_builder.rs  policy_distribution.rs  ppo.rs  sampler.rs  sampler2.rs  sampler_hooks.rs  sampler_hooks2.rs
crates/r2l-api/src/evaluators/: best_actor_evaluator.rs  mod.rs  simple_evaluator.rs
crates/r2l-api/src/hooks/: a2c.rs  a2c2.rs  mod.rs  new_ppo_trait.rs  normalizer.rs  on_policy.rs  on_policy2.rs  ppo.rs  ppo2.rs  sampler.rs  sampler2.rs
crates/r2l-api/src/learning_module/: mod.rs
crates/r2l-api/tests/: a2c.rs  a2c2.rs  burn_test.rs  combined.rs  new_api.rs  ppo.rs  ppo2.rs
crates/r2l-burn-lm/: Cargo.toml
crates/r2l-burn-lm/src/: burn_rollout_buffer.rs  learning_module.rs  lib.rs  sequential.rs  tensors.rs
crates/r2l-candle/: Cargo.toml
crates/r2l-candle-lm/: Cargo.toml
crates/r2l-candle-lm/src/: candle_rollout_buffer.rs  learning_module.rs  learning_module2.rs  lib.rs  tensors.rs  thread_safe_sequential.rs
crates/r2l-candle/src/: learning_module.rs  lib.rs  optimizer.rs  sequential.rs  thread_safe_sequential.rs
crates/r2l-core/: Cargo.toml
crates/r2l-core/src/: agents.rs  env.rs  env_builder.rs  ipc.rs  lib.rs  losses.rs  models.rs  on_policy_algorithm.rs  rng.rs  running_mean.rs
crates/r2l-core/tests/: env_pool.rs  vec_normalize.rs
crates/r2l-envs/: Cargo.toml
crates/r2l-envs/src/: lib.rs  running_sum_env.rs  sum_target.rs
crates/r2l-envs/tests/: recurrent_sum_target.rs
crates/r2l-examples/: Cargo.toml  ppo.safetensor
crates/r2l-examples/src/: lib.rs  new_ppo.rs  old_ppo.rs  ppo_test.rs
crates/r2l-gym/: Cargo.toml
crates/r2l-gym/src/: lib.rs  parse.rs
crates/r2l-sampler/: Cargo.toml
crates/r2l-sampler/src/: hooks.rs  lib.rs  sampler2.rs  v2.rs  worker.rs
crates/r2l-sampler/tests/: api_tests.rs
crates/r2l-subproc-env/: Cargo.toml
crates/r2l-subproc-env/src/: main.rs
crates/r2l-zoo-evaluator/: Cargo.toml
crates/r2l-zoo-evaluator/src/: main.rs  zoo_parser.rs
r2l-actors/: Cargo.toml
r2l-actors/src/: lib.rs
r2l-actors/src/buffers/: episode_bound_buffer.rs  mod.rs  step_bound_buffer.rs
r2l-actors/src/env_pools/: dummy_env_holder.rs  mod.rs
r2l-agents/: Cargo.toml  README.md
r2l-agents/src/: lib.rs
r2l-agents/src/a2c/: a2c3.rs  builder.rs  hooks.rs  mod.rs
r2l-agents/src/burn_agents/: mod.rs  ppo.rs
r2l-agents/src/candle_agents/: a2c.rs  ppo.rs  vpg.rs
r2l-agents/src/ppo/: builder.rs  hooks.rs  mod.rs  ppo2.rs  ppo3.rs
r2l-agents/src/vpg/: mod.rs  vpg3.rs
r2l-agents2/: Cargo.toml
r2l-agents2/src/: lib.rs
r2l-agents2/src/ppo/: mod.rs
r2l-api/: Cargo.toml
r2l-api/src/: buffer.rs  lib.rs  test_utils.rs
r2l-api/src/builders/: a2c.rs  distribution.rs  env.rs  env_pool.rs  learning_module.rs  mod.rs  on_policy_algo.rs  on_policy_algo2.rs  policies.rs  ppo.rs  r2l_env_pool.rs  sampler.rs  sampler_hooks.rs  sampler_hooks2.rs
r2l-api/src/hooks/: env_pool.rs  mod.rs  on_policy_algo_hooks.rs  ppo.rs  sampler.rs  sequential_env_hooks.rs
r2l-api/src/utils/: evaluator.rs  mod.rs  running_mean.rs
r2l-api/tests/: a2c.rs  burn_test.rs  ppo.rs  ppo2.rs  repo_test.rs
r2l-core/: Cargo.toml  README.md
r2l-core/src/: agents.rs  env.rs  error.rs  ipc.rs  lib.rs  numeric.rs  on_policy_algorithm.rs  rng.rs  tensors.rs  thread_safe_sequential.rs
r2l-core/src/agents/: mod.rs
r2l-core/src/buffers/: episode_bound_buffer.rs  mod.rs
r2l-core/src/distributions/: categorical_distribution.rs  diagonal_distribution.rs  mod.rs
r2l-core/src/env/: dummy_vec_env.rs  mod.rs  orchestrator.rs  sequential_vec_env.rs  sub_processing_vec_env.rs  vec_env.rs
r2l-core/src/env_pools/: episode_bound_sampler.rs  fixed_size_env_pools.rs  mod.rs  step_bound_sampler.rs  subproc_env_holder.rs  thread_env_holder.rs  variable_sized_env_pool.rs  vector_env_holder.rs  vector_env_holder2.rs
r2l-core/src/network/: mod.rs
r2l-core/src/policies/: decoupled_actor_critic.rs  learning_modules.rs  mod.rs  paralell_actor_critic.rs
r2l-core/src/sampler/: mod.rs
r2l-core/src/utils/: build_sequential.rs  clip_grad.rs  mini_batching.rs  mod.rs  rollout_buffer.rs  rollout_buffer_serialization.rs
r2l-core/tests/: vec_normalize.rs
r2l-examples/: Cargo.toml  README.md
r2l-examples/examples/r2l-gui/: main.rs
r2l-examples/examples/r2l-tui/: main.rs
r2l-examples/src/: lib.rs
r2l-gym/: Cargo.toml  README.md
r2l-gym/src/: lib.rs
r2l-macros/: Cargo.toml  README.md
r2l-macros/src/: hook.rs  hook_container.rs  lib.rs  policy_hook.rs  training_hook.rs
r2l-subproc-env/: Cargo.toml  README.md
r2l-subproc-env/src/: main.rs
r2l-verification/: Cargo.toml  README.md
r2l-verification/scripts/: a2c_test.py  manually_start_zoo.py  ppo_test.py
r2l-verification/src/: experiment_manager.rs  lib.rs  parse_config.rs  python_verifier.rs  r2l_verifier.rs
(+231 files in other folders)
