[workspace]
members = [
  "r2l-core",
  "r2l-gym",
  "r2l-macros",
  "r2l-examples",
  "r2l-subproc-env",
  "r2l-verification",
  "r2l-agents",
  "r2l-candle-lm", "r2l-buffer",
]
resolver = "3"

[workspace.dependencies]
r2l-macros = { path = "r2l-macros", version = "0.0.1" }
r2l-core = { path = "r2l-core", version = "0.0.1" }
r2l-gym = { path = "r2l-gym", version = "0.0.1" }
r2l-agents = { path = "r2l-agents", version = "0.0.1" }
r2l-api = { path = "r2l-api", version = "0.0.1" }
r2l-candle-lm = { path = "r2l-candle-lm" }
r2l-buffer = { path = "r2l-buffer" }
candle-core = { version = "0.9.1", features = ["cuda"] }
burn = { version = "0.18.0", features = ["ndarray", "autodiff"] }
candle-nn = { version = "0.9.1" }
either = "1.15.0"
bincode = { version = "2.0.1", features = ["serde"] }
crossbeam = "0.8.4"
rand = "0.9.0"
anyhow = { version = "1.0.99" }

[workspace.package]
version = "0.0.1"
edition = "2024"
description = "A rust reinforcement learning library"
repository = "https://github.com/afgTheCat/r2l"
license = "MIT OR Apache-2.0"
