[workspace]
members = [
  "crates/r2l-core",
  "crates/r2l-gym",
  "crates/r2l-macros",
  "crates/r2l-examples",
  # "crates/r2l-subproc-env",
  "crates/r2l-verification",
  "crates/r2l-agents",
  "crates/r2l-candle-lm",
  "crates/r2l-buffer",
  "crates/r2l-burn-lm",
]
resolver = "3"

[workspace.dependencies]
r2l-macros = { path = "crates/r2l-macros", version = "0.0.1" }
r2l-core = { path = "crates/r2l-core", version = "0.0.1" }
r2l-gym = { path = "crates/r2l-gym", version = "0.0.1" }
r2l-agents = { path = "crates/r2l-agents", version = "0.0.1" }
r2l-api = { path = "crates/r2l-api", version = "0.0.1" }
r2l-candle-lm = { path = "crates/r2l-candle-lm" }
r2l-buffer = { path = "crates/r2l-buffer" }
r2l-burn-lm = { path = "crates/r2l-burn-lm" }
candle-core = { version = "0.9.1", features = ["cuda"] }
burn = { version = "0.18.0", features = ["ndarray", "autodiff"] }
candle-nn = { version = "0.9.1" }
either = "1.15.0"
bincode = { version = "2.0.1", features = ["serde"] }
crossbeam = "0.8.4"
rand = "0.9.0"
anyhow = { version = "1.0.99" }

[workspace.package]
version = "0.0.1"
edition = "2024"
description = "A rust reinforcement learning library"
repository = "https://github.com/afgTheCat/r2l"
license = "MIT OR Apache-2.0"
