[workspace]
members = [
  "crates/r2l-core",
  "crates/r2l-gym",
  "crates/r2l-macros",
  "crates/r2l-examples",
  "crates/r2l-agents",
  "crates/r2l-candle",
  "crates/r2l-burn",
]
resolver = "3"

[workspace.dependencies]
r2l-macros = { path = "crates/r2l-macros", version = "0.0.1" }
r2l-core = { path = "crates/r2l-core", version = "0.0.1" }
r2l-gym = { path = "crates/r2l-gym", version = "0.0.1" }
r2l-agents = { path = "crates/r2l-agents", version = "0.0.1" }
r2l-api = { path = "crates/r2l-api", version = "0.0.1" }
r2l-candle = { path = "crates/r2l-candle" }
r2l-burn = { path = "crates/r2l-burn" }
candle-core = { version = "0.9.2" }
burn = { version = "0.20.1", features = ["ndarray", "autodiff"] }
candle-nn = { version = "0.9.2" }
either = "1.15.0"
crossbeam = "0.8.4"
rand = "0.10.0"
anyhow = { version = "1.0.102" }

[workspace.package]
version = "0.0.1"
edition = "2024"
description = "A rust reinforcement learning library"
repository = "https://github.com/afgTheCat/r2l"
license = "MIT OR Apache-2.0"
