[package]
name = "r2l-actors"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
r2l-core2 = { workspace = true }
burn = { workspace = true }
rand = "0.9.0"
ringbuffer = "0.16.0"
crossbeam = { workspace = true }
