[package]
name = "r2l-agents"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
r2l-core = { workspace = true }
r2l-candle-lm = { workspace = true }
r2l-macros = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
anyhow = { workspace = true }

