[package]
name = "r2l-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
r2l-macros = { workspace = true }
rand = { workspace = true }
interprocess = "2.2.3" 
rayon = "1.10.0"
derive_more = { version = "2.0.1", features = ["full"] }
enum_dispatch = "0.3.13"
bincode = { workspace = true }
either = {workspace = true}
safetensors = "0.4.1"
smol = "2.0.2"
crossbeam = { workspace = true }
ringbuffer = "0.16.0"
anyhow = { workspace = true }

[dev-dependencies]
r2l-api = { workspace = true }
r2l-buffer = { workspace = true }
candle-core = { workspace = true }
