[package]
name = "r2l-examples"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
r2l-core = { workspace = true }
r2l-gym = { workspace = true }
r2l-agents = { workspace = true }
r2l-api = { workspace = true }
r2l-candle-lm = { workspace = true }
candle-core = { workspace = true }
once_cell = "1.21.3"
rand = "0.9.0"

[dev-dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
eframe = "0.32.0"
egui = "0.32.0"
egui_table = "0.4.0"
egui_plot = "0.33.0"

[[example]]
name = "r2l-tui"
