[package]
name = "r2l-gym"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
r2l-core= { workspace = true }
candle-core = { workspace = true }
pyo3 = { version = "0.24.1", features = ["auto-initialize", "abi3-py311"] } 

[dev-dependencies]
once_cell = "1.21.3"

