[package]
name = "r2l-macros"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
itertools = "0.14.0"
proc-macro2 = { version = "1.0.95" }
quote = { version = "1.0.40" }
syn = { version = "2.0.101", features = ["full", "extra-traits"] }
