[package]
name = "r2l_subproc_env"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
interprocess = "2.2.3"
r2l-core = { workspace = true }
candle-core = { workspace = true }
clap = { version = "4.5.39", features = ["derive"] }
r2l-gym = { workspace = true }
bincode = { version = "2.0.1", features = ["serde"] }
rand = "0.9.0"
