[package]
name = "r2l-verification"
version = "0.1.0"
edition = "2024"

[dependencies]
nom = "8.0.0"
r2l-core = { workspace = true }
candle-core = { workspace = true }
r2l-gym = { workspace= true }
r2l-agents = { workspace = true }
pyo3 = { version = "0.24.1", features = ["auto-initialize", "abi3-py311"] } 
once_cell = "1.21.3"
