[package]
name = "r2l-agents"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[features]
cuda = [
  "r2l-core/cuda",
  "r2l-candle-lm/cuda",
  "candle-core/cuda",
  "candle-nn/cuda",
]

[dependencies]
r2l-core = { workspace = true }
r2l-candle-lm = { workspace = true }
r2l-burn-lm = { workspace = true }
r2l-macros = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
anyhow = { workspace = true }
burn = { workspace = true }
rand = { workspace = true }
