[package]
name = "r2l-api"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
r2l-gym = { workspace = true }
r2l-core = { workspace = true }
r2l-agents = { workspace = true }
r2l-sampler = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
burn = { workspace = true }
r2l-candle = { workspace = true }
r2l-burn = { workspace = true }
crossbeam = { workspace = true }
rand = "0.10.0"
anyhow = { workspace = true }
derive_more = "2.0.1"
bimodal-array = { version = "0.1.2" }

[features]
test-utils = []
cuda = [
  "r2l-core/cuda",
  "r2l-candle/cuda",
  "candle-core/cuda",
  "candle-nn/cuda",
]

[dev-dependencies]
r2l-api = { path = ".", features = ["test-utils"] }
