[package]
name = "r2l-candle"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[features]
cuda = [
  "r2l-core/cuda",
  "candle-core/cuda",
  "candle-nn/cuda",
]

[dependencies]
r2l-core = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
safetensors = { version = "0.8.0" }
either = { workspace = true }
rand = { workspace = true }
derive_more = { version = "2.0.1", features = ["full"] }
anyhow = { workspace = true }
