[package]
name = "r2l-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
rand = { workspace = true }
rayon = "1.10.0"
derive_more = { version = "2.0.1", features = ["full"] }
either = {workspace = true}
safetensors = "0.4.1"
crossbeam = { workspace = true }
ringbuffer = "0.16.0"
anyhow = { workspace = true }
candle-core = { workspace = true, optional = true }
burn = { workspace = true, optional = true }
bimodal-array = { version = "0.1.1" }
itertools = "0.14.0"

[dev-dependencies]
r2l-api = { workspace = true }
candle-core = { workspace = true }

[features]
candle = ["dep:candle-core"]
burn = ["dep:burn"]
cuda = ["candle", "candle-core/cuda"]
default = ["candle", "burn"]
