[package]
name = "r2l-envs"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rand = { workspace = true }
r2l-core = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
burn = { workspace = true }
r2l-agents = { workspace = true }
r2l-burn = { workspace = true }
r2l-sampler = { workspace = true }
