[package]
name = "r2l-examples"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]

[dev-dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
eframe = "0.32.0"
egui = "0.32.0"
egui_table = "0.4.0"
egui_plot = "0.33.0"
r2l-core = { workspace = true }
r2l-gym = { workspace = true }
r2l-agents = { workspace = true }
r2l-api = { workspace = true }
r2l-candle = { workspace = true }
r2l-burn = { workspace = true }
candle-core = { workspace = true }
candle-nn = { version = "0.9.2" }
burn = { workspace = true }
rand = "0.9.0"
anyhow = { workspace = true }
r2l-sampler = { workspace = true }

[[example]]
name = "r2l-tui"
