[package]
name = "r2l-sampler"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
bimodal-array = { workspace = true }
r2l-core = { workspace = true }
crossbeam = { workspace = true }
rand = { workspace = true }
itertools = "0.15.0"
