[package]
name = "r2l-sampler"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
bimodal-array = { workspace = true }
r2l-core = { workspace = true }
crossbeam = { workspace = true }
rand = { workspace = true }
itertools = "0.15.0"

[dev-dependencies]
r2l-api = { workspace = true }
r2l-gym = { workspace = true }
r2l-agents = { workspace = true }
r2l-burn = { workspace = true }
burn = { workspace = true }
