[package]
name = "r2l_subproc_env"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
r2l-core = { workspace = true }
candle-core = { workspace = true }
r2l-gym = { workspace = true }
bincode = { workspace = true }
r2l-candle-lm = { workspace = true }
interprocess = "2.2.3"
clap = { version = "4.5.39", features = ["derive"] }
rand = "0.9.0"
